force-app/main/default/objects/Zuora__PaymentGateway__c/Zuora__PaymentGateway__c.object-meta.xml
<CustomObject>
    <label>Payment Gateway</label>
    <nameField>
        
        <label>PaymentGateway Name</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Payment Gateways</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>