force-app/main/default/objects/Zuora__PaymentGateway__c/fields/Client_Owner__c.field-meta.xml
<CustomField>
    <fullName>Client_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Gateways</relationshipLabel>
    <relationshipName>Payment_Gateways</relationshipName>
    <type>Lookup</type>
</CustomField>