force-app/main/default/objects/Zuora__PaymentGateway__c/fields/Remittance_Address__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Address__c</fullName>
    <inlineHelpText>Remittance address that&apos;s used in delinquency letters generated by Conga.</inlineHelpText>
    <label>Remittance Address</label>
    <length>300</length>
    <type>Html</type>
</CustomField>