force-app/main/default/objects/Zuora__PaymentGateway__c/fields/Zuora__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>Zuora__IsDefault__c</fullName>
    <label>IsDefault</label>
    <length>80</length>
    <type>Text</type>
</CustomField>